@@ -1,22 +1,18 @@
 package dev.ebrydeu.spring_boot_library.services.impl;
 
 import dev.ebrydeu.spring_boot_library.domain.dto.MessageDto;
-import dev.ebrydeu.spring_boot_library.domain.dto.UserDto;
 import dev.ebrydeu.spring_boot_library.domain.entities.Message;
 import dev.ebrydeu.spring_boot_library.repositories.MessageRepository;
 import dev.ebrydeu.spring_boot_library.services.MessageService;
-import dev.ebrydeu.spring_boot_library.services.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import static dev.ebrydeu.spring_boot_library.exception.Exceptions.InternalServerErrorException;
 import static dev.ebrydeu.spring_boot_library.exception.Exceptions.NotFoundException;
 import static dev.ebrydeu.spring_boot_library.libs.Utils.isNullable;
 
@@ -26,28 +22,25 @@ import static dev.ebrydeu.spring_boot_library.libs.Utils.isNullable;
 public class MessageServiceImpl implements MessageService {
 
     private final MessageRepository repository;
-    private final UserService userService;
-
 
     @Override
     @CacheEvict("messages")
     public MessageDto save(MessageDto dto) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        UserDto currentUser = userService.findByEmail(authentication.getName());
-
-        Message message = MessageDto.map(dto);
-        message.setUser(UserDto.map(currentUser));
-        Message savedMessage = repository.save(message);
-        return MessageDto.map(savedMessage);
+        try {
+            Message message = MessageDto.map(dto);
+            Message savedMessage = repository.save(message);
+            return MessageDto.map(savedMessage);
+        } catch (Exception e) {
+            throw new InternalServerErrorException(e.getMessage());
+        }
     }
 
     @Override
     @Cacheable("messages")
     public List<MessageDto> findAll() {
-        List<Message> messages = repository.findAll();
-        return messages.stream()
+        return repository.findAll().stream()
                 .map(MessageDto::map)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -65,6 +58,11 @@ public class MessageServiceImpl implements MessageService {
     }
 
     @Override
+    public List<MessageDto> findPublicMessages() {
+        return null;
+    }
+
+    @Override
     public boolean isExists(Long id) {
         return repository.existsById(id);
     }
@@ -78,22 +76,25 @@ public class MessageServiceImpl implements MessageService {
         isNullable(existingMessage::setTitle, dto.title());
         isNullable(existingMessage::setPrivate, dto.isPrivate());
 
-        repository.save(existingMessage);
+        try {
+            repository.save(existingMessage);
+        } catch (Exception e) {
+            throw new InternalServerErrorException(e.getMessage());
+        }
     }
 
     @Override
     @CacheEvict("messages")
     public void delete(Long id) {
         Message messageToDelete = repository.findById(id).orElseThrow(() -> new NotFoundException("Message not found with id: " + id));
-        repository.deleteById(messageToDelete.getId());
+
+        try {
+            repository.deleteById(messageToDelete.getId());
+        } catch (Exception e) {
+            throw new InternalServerErrorException(e.getMessage());
+        }
     }
-    @Override
-    @Cacheable("publicMessages")
-    public List<MessageDto> findPublicMessages() {
-        return repository.findMessageByIsPrivateFalse().stream()
-                .map(MessageDto::map)
-                .collect(Collectors.toList());
-    }
+
 
 }
 
